<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".modules.login.LoginActivity">

    <TextView
        android:id="@+id/registerLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:textColor="#090909"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="497dp"
        android:background="@drawable/edittextdesign"
        android:hint="@string/username_hint"
        android:paddingStart="15dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="429dp"
        android:background="@drawable/edittextdesign"
        android:hint="@string/phone_hint"
        android:paddingStart="15dp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/edittextdesign"
        android:hint="@string/email_hint"
        android:paddingStart="15dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="274dp"
        android:background="@drawable/edittextdesign"
        android:hint="@string/password_hint"
        android:paddingStart="15dp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="188dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:backgroundTint="#ECB30B" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="144dp"
        android:text="@string/signupText" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="268dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="144dp"
        android:text="@string/loginText"
        android:textColor="#ECB30B" />

</RelativeLayout>